add solver interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,21 @@ project(filter_position_optimization)
 
 set(CMAKE_CXX_STANDARD 14)
 
+if(APPLE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++11 -g -D_GLIBCXX_USE_CXX11_ABI=0")
+    set(GUROBI_INCLUDE_DIRECTORY "/Library/gurobi901/mac64/include")
+    set(GUROBI_LIB_DIRECTORY "/Library/gurobi901/mac64/lib")
+    set(SOURCE_FILES src/main.cpp ${GUROBI_INCLUDE_DIRECTORY}/gurobi_c++.h)
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++11 -g -D_GLIBCXX_USE_CXX11_ABI=0")
+    set(GUROBI_INCLUDE_DIRECTORY "/opt/gurobi901/linux64/include")
+    set(GUROBI_LIB_DIRECTORY "/opt/gurobi901/linux64/lib")
+    set(SOURCE_FILES main.cpp ${GUROBI_INCLUDE_DIRECTORY}/gurobi_c++.h)
+endif()
+
+include_directories(${GUROBI_INCLUDE_DIRECTORY})
+link_directories(${GUROBI_LIB_DIRECTORY})
+
 include_directories(include)
 
 find_package(Eigen3 REQUIRED)
@@ -11,15 +26,20 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 find_package(osqp REQUIRED)
 
 add_library(FILTER_LIB src/interpolate.cpp
-                       src/solver_interface/osqp_interface.cpp
-                       src/solver_interface/csc_matrix_conv.cpp
+        src/solver/solver_interface/osqp_interface.cpp
+        src/solver/solver_interface/csc_matrix_conv.cpp
                        src/filter.cpp
                        src/utils.cpp
-                       src/qp_interface.cpp)
+        src/optimizer.cpp
+                       src/solver/qp_solver_gurobi.cpp
+                       src/solver/qp_solver_osqp.cpp)
 target_link_libraries(FILTER_LIB osqp::osqp)
+target_link_libraries(FILTER_LIB gurobi_c++)
+target_link_libraries(FILTER_LIB gurobi90)
 
 add_executable(filter_position_optimization main.cpp)
 target_link_libraries(filter_position_optimization PRIVATE FILTER_LIB)
 
 add_executable(pseudo_optimization main_pseudo.cpp)
 target_link_libraries(pseudo_optimization PRIVATE FILTER_LIB)
+
