add nonconvex solver result

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ include_directories(include)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
+find_package(NLOPT REQUIRED)
+include_directories(${NLOPT_INCLUDE_DIRS})
+
 find_package(osqp REQUIRED)
 
 add_library(FILTER_LIB src/interpolate.cpp
@@ -31,16 +34,25 @@ add_library(FILTER_LIB src/interpolate.cpp
                        src/solver/qp_solver_gurobi.cpp
                        src/solver/lp_solver_gurobi.cpp
                        src/solver/qp_solver_osqp.cpp
+                       src/solver/nc_solver_nlopt.cpp
                        src/filter.cpp
                        src/utils.cpp
                        src/optimizer.cpp)
 target_link_libraries(FILTER_LIB osqp::osqp)
 target_link_libraries(FILTER_LIB gurobi_c++)
 target_link_libraries(FILTER_LIB gurobi90)
+if(APPLE)
+    target_link_libraries(FILTER_LIB ${NLOPT_LIBRARIES})
+else()
+    target_link_libraries(FILTER_LIB "/usr/local/lib/libnlopt.so")
+endif()
 
-add_executable(filter_position_optimization main.cpp)
-target_link_libraries(filter_position_optimization PRIVATE FILTER_LIB)
+add_executable(filter_position_opt main.cpp)
+target_link_libraries(filter_position_opt PRIVATE FILTER_LIB)
 
-add_executable(pseudo_optimization main_pseudo.cpp)
-target_link_libraries(pseudo_optimization PRIVATE FILTER_LIB)
+add_executable(pseudo_opt main_pseudo.cpp)
+target_link_libraries(pseudo_opt PRIVATE FILTER_LIB)
+
+add_executable(nonconvex_opt main_nonconvex.cpp)
+target_link_libraries(nonconvex_opt PRIVATE FILTER_LIB)
 
