--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(filter_position_optimization)
 
 set(CMAKE_CXX_STANDARD 14)
 
+add_definitions(-DRESULT_DIR="${CMAKE_SOURCE_DIR}")
+
 if(APPLE)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++11 -g -D_GLIBCXX_USE_CXX11_ABI=0")
     set(GUROBI_INCLUDE_DIRECTORY "/Library/gurobi901/mac64/include")
