add osqp lp solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(filter_position_optimization)
 set(CMAKE_CXX_STNDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++11 -g -D_GLIBCXX_USE_CXX11_ABI=0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++14 -g -D_GLIBCXX_USE_CXX11_ABI=0")
 
 option(CXX "enable C++ compilation" ON)
 if(CXX)
@@ -23,6 +23,12 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 find_package(NLOPT REQUIRED)
 include_directories(${NLOPT_INCLUDE_DIRS})
 
+find_package(osqp REQUIRED)
+get_target_property(osqp_INCLUDE_DIR osqp::osqpstatic INTERFACE_INCLUDE_DIRECTORIES)
+
+# OSQP
+find_package(OsqpEigen REQUIRED)
+
 if(MSVC AND MT)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
@@ -33,8 +39,12 @@ endif()
 add_executable(filter_position_opt main.cpp
                                    src/interpolate.cpp
                                    src/solver/qp_solver_gurobi.cpp
+                                   src/solver/qp_solver_osqp.cpp
                                    src/solver/lp_solver_gurobi.cpp
+                                   src/solver/lp_solver_osqp.cpp
                                    src/solver/nc_solver_nlopt.cpp
+                                   src/solver/osqp_interface/csc_matrix_conv.cpp
+                                   src/solver/osqp_interface/osqp_interface.cpp
                                    src/filter.cpp
                                    src/utils.cpp
                                    src/optimizer.cpp
@@ -50,7 +60,7 @@ if(CXX)
     target_link_libraries(filter_position_opt optimized ${GUROBI_CXX_LIBRARY} debug ${GUROBI_CXX_DEBUG_LIBRARY})
 endif()
 
-target_link_libraries(filter_position_opt ${GUROBI_LIBRARY})
+target_link_libraries(filter_position_opt ${GUROBI_LIBRARY} osqp::osqpstatic)
 
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
     include(FeatureSummary)
