--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(filter_position_optimization)
 set(CMAKE_CXX_STNDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 option(CXX "enable C++ compilation" ON)
 if(CXX)
